# StudyMusicPlayer

./: Components.py  LICENSE  README.md  downloader.py  main.py  pyproject.toml  utils.py  widgets.py
Databases/: config.json  queue.json
Databases Backup/: config.json
src/: main.py  widgets.py
src/Databases/: config.json  queue.json
src/studymusicplayer/: Components.py  main.py  widgets.py
src/studymusicplayer/Databases/: queue.json
studymusicplayer/: Components.py  downloader.py  main.py  utils.py  widgets.py
studymusicplayer/Databases/: config.json
