[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "StudyMusicPlayer"
version = "0.0.2"
description = "A Music Player."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = "MIT"
license-files = ["LICENSE*"]

dependencies = [
    "customtkinter",
    "pillow",
    "pyglet",
    "tinytag",
    "yt-dlp"
]

[project.scripts]
studymusicplayer = "studymusicplayer.main:main"

[tool.hatch.build.targets.wheel]
packages = ["studymusicplayer"]
include = [
    "studymusicplayer/Images/**/*",
    "studymusicplayer/Songs/**/*",
    "studymusicplayer/Console_Logs/**/*",
    "studymusicplayer/Temp_Downloads/**/*",
    "studymusicplayer/Databases/**/*"
]

